# kicad_oce_3D

./: CMakeLists.txt  README.md
plugin/: CMakeLists.txt  loadmodel.cpp  oce.cpp
scenegraph/3d_cache/sg/: CMakeLists.txt
